--- a/src/assets/styles/components/index.css
+++ b/src/assets/styles/components/index.css
@@ -596,23 +596,23 @@
   gap: 24px;
 }
 .block__welcome-title {
-  font-family: "Inter Bold", sans-serif;
+  font-family: var(--font-family_3);
   font-weight: 700;
   font-size: 36px;
   line-height: 144%;
   letter-spacing: 0.33px;
-  color: #101828;
+  color: var(--color_1);
 }
 .block__welcome-title span {
-  color: #306ff5;
+  color: var(--color_3);
 }
 .block__welcome-text {
-  font-family: "SF Pro Text Medium", sans-serif;
+  font-family: var(--font-family_4);
   font-weight: 500;
   font-size: 15px;
   line-height: 20px;
   letter-spacing: -0.24px;
-  color: #101828;
+  color: var(--color_1);
 }
 .block__welcome-form {
   margin-top: 64px;
@@ -621,21 +621,21 @@
   border-radius: 12px;
   padding: 24px;
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.16), 0 0 2px 0 rgba(0, 0, 0, 0.08);
-  background: #fff;
+  background: var(--background-color_1);
   display: flex;
   flex-direction: column;
   gap: 32px;
 }
 .block__welcome-subtitle {
   width: 600px;
-  font-family: "Inter Bold", sans-serif;
+  font-family: var(--font-family_3);
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 0.38px;
-  color: #101828;
+  color: var(--color_1);
 }
-.block__welcome-image {
+.block__welcome-background {
   position: absolute;
   top: 0;
   left: 50%;
@@ -646,60 +646,14 @@
   height: 900px;
   overflow: hidden;
 }
-.block__welcome-image img {
-  -o-object-fit: cover;
-     object-fit: cover;
-  transform: translate(62%, -31%);
-}
-
-.form__welcome {
-  width: 628px;
-  height: 58px;
+.block__welcome-background-wrapper {
   display: flex;
-  gap: 24px;
+  gap: 2%;
+  justify-content: end;
+  transform: translateX(24%);
 }
-.form__welcome-content {
-  display: grid;
-  gap: 8px;
-  flex: 1;
-}
-.form__welcome-content label {
-  font-family: "SF Pro Text Medium", sans-serif;
-  font-weight: 500;
-  font-size: 13px;
-  line-height: 16px;
-  letter-spacing: -0.08px;
-  color: #667085;
-}
-.form__welcome-content input {
-  border: none;
-  border-bottom: solid 0.7px #d0d5dd;
-  font-family: "SF Pro Text Regular", sans-serif;
-  font-weight: 400;
-  font-size: 17px;
-  line-height: 22px;
-  letter-spacing: -0.41px;
-  color: #101828;
-}
-.form__welcome button {
-  border-radius: 8px;
-  border: 0px;
-  padding: 11px 24px;
-  width: 132px;
-  height: 58px;
-  cursor: pointer;
-  background: #2d66ee;
-  text-align: left;
-  font-family: "SF Pro Text Semibold", sans-serif;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 18px;
-  letter-spacing: -0.15px;
-  color: #fff;
-}
-
 @media screen and (max-width: 1224px) {
-  .block__welcome-image {
+  .block__welcome-background {
     width: 100vw;
   }
 }
@@ -727,15 +681,78 @@
     width: 295px;
     font-size: 16px;
   }
-  .block__welcome-image {
+  .block__welcome-background {
     height: 762px;
   }
-  .block__welcome-image img {
-    scale: 0.6;
-    transform: translate(50%, -46%);
+  .block__welcome-background-wrapper {
+    transform: translateX(16%);
   }
+}
+@media screen and (max-width: 767px) {
+  .block__welcome {
+    height: 1268px;
+  }
+  .block__welcome-form {
+    margin-top: 536px;
+    width: 392px;
+  }
+  .block__welcome-background {
+    height: 1268px;
+  }
+  .block__welcome-background-wrapper {
+    transform: translate(32%, 20%);
+  }
+}
+
+.form__welcome {
+  width: 628px;
+  height: 58px;
+  display: flex;
+  gap: 24px;
+}
+.form__welcome-content {
+  display: grid;
+  gap: 8px;
+  flex: 1;
+}
+.form__welcome-content label {
+  font-family: var(--font-family_4);
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 16px;
+  letter-spacing: -0.08px;
+  color: var(--color_6);
+}
+.form__welcome-content input {
+  border: none;
+  border-bottom: solid 0.7px #d0d5dd;
+  font-family: var(--font-family_6);
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 22px;
+  letter-spacing: -0.41px;
+  color: var(--color_1);
+}
+.form__welcome button {
+  border-radius: 8px;
+  border: 0px;
+  padding: 11px 24px;
+  width: 132px;
+  height: 58px;
+  cursor: pointer;
+  background: var(--color_3);
+  text-align: left;
+  font-family: var(--font-family_8);
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: -0.15px;
+  color: var(--color_7);
+}
+@media screen and (max-width: 1023px) {
   .form__welcome {
     width: 295px;
+    display: flex;
     flex-direction: column;
     gap: 32px;
   }
@@ -747,28 +764,66 @@
   }
 }
 @media screen and (max-width: 767px) {
-  .block__welcome {
-    height: 1268px;
-  }
-  .block__welcome-form {
-    margin-top: 536px;
-    width: 392px;
-  }
-  .block__welcome-image {
-    height: 1268px;
-  }
-  .block__welcome-image img {
-    scale: 0.5;
-    transform: translate(-10%, -16%);
-  }
   .form__welcome {
     width: 224px;
   }
 }
+
+.background__image {
+  display: flex;
+  flex-direction: column;
+  -moz-column-gap: 0px;
+       column-gap: 0px;
+  row-gap: 10px;
+  rotate: -12deg;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+@media screen and (max-width: 1023px) {
+  .background__image {
+    width: 146px;
+  }
+}
+
+.image-left {
+  animation: moveBackgroundLeft 30s linear infinite;
+}
+@media screen and (max-width: 767px) {
+  .image-left {
+    animation: none;
+  }
+}
+
+.image-right {
+  animation: moveBackgroundRight 30s linear infinite;
+}
+@media screen and (max-width: 767px) {
+  .image-right {
+    margin-top: -30px;
+    animation: none;
+  }
+}
+
+@keyframes moveBackgroundLeft {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-50%);
+  }
+}
+@keyframes moveBackgroundRight {
+  0% {
+    transform: translateY(-50%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
 .block__dev {
   background-color: #ffffff;
-  margin-left: -108px;
-  margin-right: -108px;
+  margin-left: 0px;
+  margin-right: 20px;
   padding: 80px 108px;
   width: 100%;
   display: flex;
