--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,11 +1,47 @@
 html {
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
+  font-family: var(--font-family_1);
+  font-style: normal;
+  font-weight: 400;
 }
 
-*,
-*:before,
+body {
+  background: #f2f4f7;
+  width: 100%;
+  margin: 0;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 108px;
+  box-sizing: border-box;
+}
+@media screen and (max-width: 1224px) {
+  .container {
+    padding: 0 80px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .container {
+    padding: 0 32px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .container {
+    padding: 0 16px;
+  }
+}
+
+* {
+  box-sizing: border-box;
+}
+*:before {
+  box-sizing: border-box;
+}
 *:after {
-    box-sizing: border-box;
-}
-
+  box-sizing: border-box;
+}/*# sourceMappingURL=global.css.map */
